<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/AppContainerPadding"
        >

        <TextView
            android:id="@+id/text_marketing_message"
            android:text="@string/marketing_message"
            style="@style/AppTitleMarketingText" android:layout_gravity="center"/>

        <TextView
            android:id="@+id/text_introduction_heading"
            android:text="@string/introduction_title"
            style="@style/Heading1"/>

        <View style="@style/LineSeparator"></View>

        <TextView
            android:id="@+id/text_introduction_content"
            style="@style/Body1"
            android:text="@string/introduction_body"/>

        <View style="@style/VerticalWhitespaceSeparator"></View>

        <TextView
            android:id="@+id/text_installation_heading"
            style="@style/Heading1"
            android:text="@string/install_title"/>

        <View style="@style/LineSeparator"></View>

        <TextView
            android:id="@+id/text_install_body"
            style="@style/Body1"
            android:text="@string/install_body"/>

        <View style="@style/VerticalWhitespaceSeparator"></View>

        <TextView
            android:id="@+id/text_permission_heading"
            android:text="@string/permission_title"
            style="@style/Heading1"/>

        <View style="@style/LineSeparator"></View>

        <TextView
            android:id="@+id/text_permission_content"
            style="@style/Body1"
            android:text="@string/permission_body"/>

        <View style="@style/VerticalWhitespaceSeparator"></View>

        <TextView
            android:id="@+id/text_opensource_title"
            style="@style/Heading1"
            android:text="@string/github_title"
            />

        <View style="@style/LineSeparator"></View>

        <TextView
            android:id="@+id/text_opensource_body"
            style="@style/Body1"
            android:text="@string/github_body"/>

    </LinearLayout>
</ScrollView>



